cambios agregamos sitio de twitch

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola mundo</title>
+    <title>Hola cielo</title>
 </head>
 <body>
     
 </body>
 <p>
-    Hola estudiantes este es mi sitio web
+    Hola a migos estudiantes este es mi sitio web
 </p>
 </html>
